Update AUTHORS file (add Alexis Laferriere)

--- a/AUTHORS
+++ b/AUTHORS
@@ -35,6 +35,7 @@ Alexander Herz <alexander.herz@mytum.de>
 Alexandr Petrosian <paf@design.ru>
 Alexandr Shadchin <ShadchinAV@mail.ru>
 Alexandre Oliva <aoliva@redhat.com>
+Alexis Laferriere <alexis.laf@xymus.net>
 Alistair G. Crooks <agc@uts.amdahl.com>
 Allan Hsu <allan@counterpop.net>
 Andre Leiradella <andre@leiradella.com>
