Update AUTHORS file (add Gustavo Giraldez)

--- a/AUTHORS
+++ b/AUTHORS
@@ -149,6 +149,7 @@ George Talbot <Gtalbot@ansarisbio.com>
 Gerard A Allan
 Glauco Masotti <glauco.masotti@libero.it>
 Grzegorz Jakacki <jakacki@acm.org>
+Gustavo Giraldez <ggiraldez@manas.com.ar>
 Gustavo Rodriguez-Rivera <grr@cs.purdue.edu>
 H.J. Lu <hjl.tools@gmail.com>
 Hamayama <hamay1010@gmail.com>
