--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+[7.2j]
+
+2018-01-21  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README: Bump version to 7.2j (rev. J).
+	* Makefile.am (libgc_la_LDFLAGS): Bump version-info to 2:2:1.
+	* Makefile.in: Regenerate.
+
 2018-01-19  Ivan Maidanski <ivmai@mail.ru>
 
 	* Makefile.am (libgc_la_LDFLAGS): Change -version-info from 2:1:0
