--- a/AUTHORS
+++ b/AUTHORS
@@ -185,6 +185,7 @@ James Dominy
 Jan Alexander Steffens <jan.steffens@gmail.com>
 Jan Wielemaker <J.Wielemaker@cs.vu.nl>
 Jani Kajala <jani@sumea.com>
+Jay Krell <jaykrell@microsoft.com>
 Jean-Baptiste Nivois
 Jean-Claude Beaudoin <jean.claude.beaudoin@gmail.com>
 Jean-Daniel Fekete <fekete@cs.umd.edu>
