Update AUTHORS file (add Shea Levy)

--- a/AUTHORS
+++ b/AUTHORS
@@ -346,6 +346,7 @@ Samuel Thibault <samuel.thibault@gnu.org>
 Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>
 Scott Schwartz <schwartz@groucho.cse.psu.edu>
 Shawn Wagner <shawnw@speakeasy.org>
+Shea Levy <shea@shealevy.com>
 Shiro Kawai <shiro@lava.net>
 Simon Gornall <simon@gornall.net>
 Simon Posnjak <simon.posnjak@siol.net>
