--- a/AUTHORS
+++ b/AUTHORS
@@ -227,6 +227,7 @@ Kenneth Schalk <schalk@cadtls.hlo.dec.com>
 Kevin Kenny <kenny@m.cs.uiuc.edu>
 Kevin Tew <tewk@racket-lang.org>
 Kevin Warne <kevinw@direct.ca>
+Kimura Wataru <kimuraw@i.nifty.jp>
 Kjetil Matheussen <k.s.matheussen@notam02.no>
 Klaus Treichel <ktreichel@web.de>
 Klemens Zwischenbrugger <ka7@la-evento.com>
