--- a/AUTHORS
+++ b/AUTHORS
@@ -61,6 +61,7 @@ Ari Huttunen <Ari.Huttunen@hut.fi>
 Arrigo Triulzi <arrigo@ic.ac.uk>
 Ashley Bone <ashley.bone@nvl.army.mil>
 Assar Westerlund <assar@sics.se>
+Aurelien Larcher <aurelien.larcher@gmail.com>
 Barry DeFreese <bdefreese@debian.org>
 Baruch Siach <baruch@tkos.co.il>
 Ben A. Mesander <ben@piglet.cr.usgs.gov>
