Update AUTHORS file (add Natanael Copa)

--- a/AUTHORS
+++ b/AUTHORS
@@ -259,6 +259,7 @@ Mike McGaughey <mmcg@cs.monash.edu.au>
 Mike Stump <mrs@windriver.com>
 Mitch Harris <maharri@uiuc.edu>
 Mohan Embar <gnustuff@thisiscool.com>
+Natanael Copa <ncopa@alpinelinux.org>
 Nathanael Nerode <neroden@twcny.rr.com>
 Neale Ferguson <neale@mono-cvs.ximian.com>
 Neil Sharman <neil@cs.mu.oz.au>
