--- a/AUTHORS
+++ b/AUTHORS
@@ -86,6 +86,7 @@ Bruce Mitchener <bruce.mitchener@gmail.com>
 Bruno Haible <bruno@clisp.org>
 Bryce McKinlay <mckinlay@redhat.com>
 Burkhard Linke <blinke@cebitec.uni-bielefeld.de>
+Calvin Hill <calvin@hakobaito.co.uk>
 Carlos J. Puga Medina <cpm@fbsd.es>
 Cesar Eduardo Barros <cesarb@nitnet.com.br>
 Charles Fiterman <cef@geode.geodesic.com>
