--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+[7.2k]
+
+2018-04-19  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README: Bump version to 7.2k (rev. K).
+	* Makefile.am (libgc_la_LDFLAGS): Bump version-info to 2:3:1.
+	* Makefile.in: Regenerate.
+
 2018-04-18  Ivan Maidanski <ivmai@mail.ru>
 
 	* dbg_mlc.c (GC_store_debug_info_inner): Remove comment (as it exists
