--- a/AUTHORS
+++ b/AUTHORS
@@ -259,6 +259,7 @@ Mike McGaughey <mmcg@cs.monash.edu.au>
 Mike Stump <mrs@windriver.com>
 Mitch Harris <maharri@uiuc.edu>
 Mohan Embar <gnustuff@thisiscool.com>
+Naoyuki Sawa <sawa_naoyuki-1@yahoo.co.jp>
 Natanael Copa <ncopa@alpinelinux.org>
 Nathanael Nerode <neroden@twcny.rr.com>
 Neale Ferguson <neale@mono-cvs.ximian.com>
