--- a/AUTHORS
+++ b/AUTHORS
@@ -280,6 +280,7 @@ Mike McGaughey <mmcg@cs.monash.edu.au>
 Mike Stump <mrs@windriver.com>
 Mitch Harris <maharri@uiuc.edu>
 Mohan Embar <gnustuff@thisiscool.com>
+Naoyuki Sawa <sawa_naoyuki-1@yahoo.co.jp>
 Nathanael Nerode <neroden@twcny.rr.com>
 Neale Ferguson <neale@mono-cvs.ximian.com>
 Neil Sharman <neil@cs.mu.oz.au>
