--- a/AUTHORS
+++ b/AUTHORS
@@ -184,6 +184,7 @@ James Dominy
 Jan Alexander Steffens <jan.steffens@gmail.com>
 Jan Wielemaker <J.Wielemaker@cs.vu.nl>
 Jani Kajala <jani@sumea.com>
+Jared McNeill <jmcneill@NetBSD.org>
 Jay Krell <jaykrell@microsoft.com>
 Jean-Baptiste Nivois
 Jean-Claude Beaudoin <jean.claude.beaudoin@gmail.com>
@@ -235,6 +236,7 @@ Kumar Srikantan
 Kurt Miller <kurt@intricatesoftware.com>
 Lars Farm <lars.farm@ite.mh.se>
 Laurent Morichetti <l_m@pacbell.net>
+Leonardo Taccari <iamleot@gmail.com>
 Linas Vepstas <linasvepstas@gmail.com>
 Loren J. Rittle <rittle@latour.labs.mot.com>
 Louis Zhuang <louis.zhuang@acm.org>
