--- a/ChangeLog
+++ b/ChangeLog
@@ -3929,8 +3929,8 @@
 
 2011-04-10  Ivan Maidanski  <ivmai@mail.ru> (really Iain Sandoe, Mike Stump)
 
-	* dyn_load.c (GC_dyld_sections): Add more sctions.
-	* dyn_load.c (GC_dyld_add_sect_fmts): New static varaible.
+	* dyn_load.c (GC_dyld_sections): Add more sections.
+	* dyn_load.c (GC_dyld_add_sect_fmts): New static variable.
 	* dyn_load.c (L2_MAX_OFILE_ALIGNMENT): New macro.
 	* dyn_load.c (GC_dyld_image_add, GC_dyld_image_remove): Improve
 	logging; add support for on-demand sections.
@@ -5626,7 +5626,7 @@
 2009-12-08  Ivan Maidanski <ivmai@mail.ru>
 
 	* tests/test.c (reverse_test): Comment out a check for MSWIN32
-	(when determing BIG value) assuming outdated win32S.
+	(when determining BIG value) assuming outdated win32S.
 	* tests/test.c (reverse_test): Rename to reverse_test_inner;
 	change the declaration (to be of GC_fn_type); call itself thru
 	GC_call_with_gc_active() if the argument is zero.
@@ -8465,7 +8465,7 @@
 	* alloc.c (GC_stopped_mark): Adjust printf argument type
 	specifier.
 	* backgraph.c: Include dbg_mlc.h before ifdef MAKE_BACK_GRAPH (for
-	the case when the configuration information comes from aconfig
+	the case when the configuration information comes from a config.h
 	file).
 	* checksums.c: Ditto (for gc_priv.h and CHECKSUMS, respectively).
 	* include/gc_allocator.h (GC_ATTR_UNUSED): Use "__unused__"
@@ -9141,7 +9141,7 @@
 
 2009-02-28  Hans Boehm <Hans.Boehm@hp.com>
 
-	* misc.c (GC_set_warn_proc): Implicitly intialize GC on
+	* misc.c (GC_set_warn_proc): Implicitly initialize GC on
 	non-Cygwin win32.
 
 2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Really Petr Krajca)
